assets/css/style.css
/* ... */
.nav_top ul li a {
    color: #000;
    font-size: 15px;
    font-family: 'Ubuntu', sans-serif;
}


/* .nav_top .social_links li{
	padding: -5px;
} */

.nav_top .email {
    padding: 10px 0;
}

.nav_top .email i {
    color: #4E73DF;
    font-size: 18px;
    padding-right: 5px;
}

.nav_top .btn-success {
    padding-left: 35px;
    padding-right: 35px;
    background: #4E73DF;
    border-color: #4E73DF;
    box-shadow: 0 0 0 .2rem #4E73DF;
    font-size: 14px;
    letter-spacing: .5px;
    margin: 5px 0;
    font-family: sans-serif;
}

.nav_top .btn-success:focus {
    padding-left: 35px;
    padding-right: 35px;
    background: #4E73DF;
    border-color: #4E73DF;
    box-shadow: 0 0 0 .2rem #4E73DF;
}

.nav_top .social_links li a {
    padding: 10px;
    margin-left: 2px;
}

.nav_top .col-sm-3:nth-child(3) {
    display: none;
}

.nav_top .col-sm-3:nth-child(4) {
    margin-left: auto;
}


/*---------------------Nav top End------------------------*/


/*---------------------Nav middle start--------------------*/

#nav_middle_section {
    padding: 5px 0;
}


/* #nav_middle_section .logo_area {
	/* width: 178px; 
} */

#nav_middle_section .logo_area a {
    color: #4E73DF;
    text-decoration: none;
    font-family: 'Ubuntu', sans-serif;
}

#nav_middle_section .logo_area a span {
    color: #000;
}

#nav_middle_section .logo {
    width: 65px;
    height: 75px;
}

#nav_middle_section .logo_area img {
    width: 100%;
    height: 100%;
}

.nav_area .col-md-6 {
    display: flex;
}

.nav_area .nav_icon {
    padding-right: 10px;
}

.nav_area .nav_con h6 {
    margin-bottom: 0;
    text-align: left;
}

.nav_area .nav_con h6 span {
    color: #4E73DF;
}

.nav_area .nav_con a {
    color: #000;
    font-weight: normal;
}

.nav_area p {
    font-size: 15px;
    color: #524e4e;
}


/* .nav_area p:last-child{
	/* width: 100%; 
} */

.nav_area .nav_icon i {
    font-size: 20px;
    color: #4E73DF;
}

#nav_middle_section .navbar ul a {
    text-transform: uppercase;
    font-size: 13px;
    /* font-weight: bold; */
    color: #fff;
    text-decoration: none;
}

.nav_area {
    margin-top: 22px;
}


/* .branding_con{
	width:100%;
	display:flex;
	flex-direction: row;
}
.nav_area .branding_con .brand_area_cont {
	max-width: 100%;
}
.nav_area .col-sm-3:nth-child(3){
	margin-left: 10px;
}
.nav_area .col-sm-3:nth-child(4){
	margin-left: 22px;
	max-width: 21%; 
}
/* .brand_area_icon{
	margin-right: 10px;
}
.branding_con .fa{
	font-size: 33px;
	font-weight: normal;
	display: block;
	color: #009868;
}
.branding_con .fa-whatsapp{
	margin-top: 10px;
}
.branding_con h6{
	color: #009868;
	font-weight: 700;
	font-size: 13px;
	margin-bottom: 0;
}
.branding_con a{
	color: #000;
	font-weight: 700;
	font-size: 14px;
	text-decoration: none;
	margin-top: -1px;
	display: block;
}
.branding_con .email{
	width: 100%;
	font-size: 12px;
}
.branding_con .email br{
	display:none;
} */


/* .branding_con .other_brances_a{
	font-weight: 550;
	font-size: 11px;
	color: #333;
	margin-top: -20px;
} */


/* .patient_portal_button{
	background: #00984B;
	border: none;
	outline: none;
	display: inline-block;
	padding: 13px 29px;
	color: #FFF;
	font-weight: 570;
	font-size: 14px;
} */


/* .patient_portal_button:hover{
	background: linear-gradient(#00984B, #16b102);
	color: #fff;
	transition: .3s;
}
.nav_area a{
	text-decoration: none;
}
.nav_area .everyday{
	display: none;
} */


/*------------------Middle nav End----------------------*/


/*---------------------Main nav  Start----------------------*/
#main_nav {
    background: #F2F3F5;
    /* background: #4E73DF; */
    /* background-color: #32353A; */
    width: 100%;
    position: sticky;
    top: 0;
    left: 0;
    z-index: 70;
    margin-top: -23px;
}

#main_nav .nav-section{
    display: flex !important;
    justify-content: space-between;
    align-items: center;
}
.nav-logo{
    /* margin-left: 10px; */
}
#main_nav .navbar .search-box {
    margin-left: auto;
}
#main_nav .navbar .search-box i{
    margin-top: 7px;
}
#main_nav .navbar .navbar-nav {
    margin-left: auto;
    text-align: center;
    display: flex;
    align-items: center;
    /* position: absolute; */
}
.navbar-nav .patient-info-btn{
    padding: 8px 25px;
    color: #fff;
    border-radius: 20px;
    background-color: #4E73DF;
    /* background-color: #4E73DF; */
    margin-left: 33px;
}

.nav-logo{
    line-height: 0px;
    margin-bottom: 17px;
}
.nav-logo h1{
    font-family: 'Josefin Sans', sans-serif;
    margin: 0;

}
.nav-logo h1 a{
    color: #4E73DF;
    /* color: #4E73DF; */
    font-size: 28px;
    font-weight: 600;
}
.nav-logo h1 span{
    color: #000;
}
.nav-logo .tagline{
    font-size: 12px;
    font-weight: 300;
}
.collapse:not(.show) {
    /* display: block; */
}


.form-inline {
    max-width: 30%;
    margin-right: -15px;
}

.form-inline input {
    position: relative;
    border-radius: 22px;
}

.form-inline input::placeholder {
    color: #bdbdbd;
    font-size: 13px;
    font-family: "Open Sans", Arial, sans-serif;
    letter-spacing: .5px;
}

.form-inline i {
    position: absolute;
    top: 25px;
    right: 10px;
    font-size: 14px;
}

#main_nav .navbar ul li {
    margin-left: -5px;
    padding: 33px 20px;
    display: flex;
    align-items: center;
    /* border-right: 1px solid rgba(0, 0, 0, 0.07); */
    cursor: pointer;
}

#main_nav .navbar ul a {
    /* font-weight: bold; */
    font-size: 14px;
    text-transform: uppercase;
    font-family: 'Ubuntu', sans-serif;
    color: #fff;
}

.navbar ul li {
    color: #000;
}

.navbar ul a:hover li {
    color: #0A598A
}

.navbar ul .active {
    color: #0A598A;
    font-weight: bold;
}

.navbar ul li:last-child {
    /* border-right: 1px solid transparent; */
}

#main_nav .active {
    background: #f3f6f8;
    /* background: #d9f6f5; */
}

#main_nav .active {
    color: #0A598A;
}

/* .navbar ul li:hover,
#main_nav .active:hover {
    background: #fff;
} */

.navbar ul li:hover a,
#main_nav .active:hover {
    color: #000;
}
/* ... */

